--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
 	"require": {
-		"mefworks/http": "^1.0",
-		"ext-json": "*"
+		"ext-json": "*",
+		"symfony/routing": "^5.0",
+		"symfony/http-foundation": "^5.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"MediaServer\\": "src/"
+		}
 	}
 }
